--- a/titles.html
+++ b/titles.html
@@ -80,105 +80,105 @@
 
 	<button id="content-button">Generate Content</button>
 
-	<p><b>Homepage:</b><p>
-	<p><span id="title-0"></span></p>
-	<p><span id="description-0"></span></p>
+	<h2><b>Homepage</b></h2>
+	<p><b>Title: </b><span id="title-0"></span></p>
+	<p><b>Description: </b><span id="description-0"></span></p>
 
-	<p><b>Gallery:</b></p>
-	<p><span id="title-1"></span></p>
-	<p><span id="description-1"></span></p>
+	<h2><b>Gallery</b></h2>
+	<p><b>Title: </b><span id="title-1"></span></p>
+	<p><b>Description: </b><span id="description-1"></span></p>
 
-	<p><b>Amenities:</b></p>
-	<p><span id="title-2"></span></p>
-	<p><span id="description-2"></span></p>
+	<h2><b>Amenities</b></h2>
+	<p><b>Title: </b><span id="title-2"></span></p>
+	<p><b>Description: </b><span id="description-2"></span></p>
 
-	<p><b>Floor Plans:</b></p>
-	<p><span id="title-3"></span></p>
-	<p><span id="description-3"></span></p>
+	<h2><b>Floor Plans</b></h2>
+	<p><b>Title: </b><span id="title-3"></span></p>
+	<p><b>Description: </b><span id="description-3"></span></p>
 
-	<p><b>Neighborhood:</b></p>
-	<p><span id="title-4"></span></p>
-	<p><span id="description-4"></span></p>
+	<h2><b>Neighborhood</b></h2>
+	<p><b>Title: </b><span id="title-4"></span></p>
+	<p><b>Description: </b><span id="description-4"></span></p>
 
-	<p><b>Contact:</b></p>
-	<p><span id="title-5"></span></p>
-	<p><span id="description-5"></span></p>
+	<h2><b>Contact</b></h2>
+	<p><b>Title: </b><span id="title-5"></span></p>
+	<p><b>Description: </b><span id="description-5"></span></p>
 
-	<p><b>Schedule a Tour:</b></p>
-	<p><span id="title-6"></span></p>
+	<h2><b>Schedule a Tour</b></h2>
+	<p><b>Title: </b><span id="title-6"></span></p>
 	<p><span id="title-7"></span></p>
-	<p><span id="description-6"></span></p>
+	<p><b>Description: </b><span id="description-6"></span></p>
 
-	<p><b>Apply Online:</b></p>
-	<p><span id="title-8"></span></p>
+	<h2><b>Apply Online</b></h2>
+	<p><b>Title: </b><span id="title-8"></span></p>
 	<p><span id="title-9"></span></p>
-	<p><span id="description-7"></span></p>
+	<p><b>Description: </b><span id="description-7"></span></p>
 
-	<p><b>Virtual Tours:</b></p>
-	<p><span id="title-10"></span></p>
-	<p><span id="description-8"></span></p>
+	<h2><b>Virtual Tours</b></h2>
+	<p><b>Title: </b><span id="title-10"></span></p>
+	<p><b>Description: </b><span id="description-8"></span></p>
 
-	<p><b>Pet Friendly:</b></p>
-	<p><span id="title-11"></span></p>
-	<p><span id="description-9"></span></p>
+	<h2><b>Pet Friendly</b></h2>
+	<p><b>Title: </b><span id="title-11"></span></p>
+	<p><b>Description: </b><span id="description-9"></span></p>
 
-	<p><b>Directions:</b></p>
-	<p><span id="title-12"></span></p>
-	<p><span id="description-10"></span></p>
+	<h2><b>Directions</b></h2>
+	<p><b>Title: </b><span id="title-12"></span></p>
+	<p><b>Description: </b><span id="description-10"></span></p>
 
-	<p><b>FAQ:</b></p>
-	<p><span id="title-13"></span></p>
-	<p><span id="description-11"></span></p>
+	<h2><b>FAQ</b></h2>
+	<p><b>Title: </b><span id="title-13"></span></p>
+	<p><b>Description: </b><span id="description-11"></span></p>
 
-	<p><b>Availability:</b></p>
-	<p><span id="title-14"></span></p>
+	<h2><b>Availability</b></h2>
+	<p><b>Title: </b><span id="title-14"></span></p>
 	<p><span id="title-15"></span></p>
-	<p><span id="description-12"></span></p>
+	<p><b>Description: </b><span id="description-12"></span></p>
 
-	<p><b>Reviews:</b></p>
-	<p><span id="title-16"></span></p>
-	<p><span id="description-13"></span></p>
+	<h2><b>Reviews</b></h2>
+	<p><b>Title: </b><span id="title-16"></span></p>
+	<p><b>Description: </b><span id="description-13"></span></p>
 
-	<p><b>Resident Portal:</b></p>
-	<p><span id="title-17"></span></p>
+	<h2><b>Resident Portal</b></h2>
+	<p><b>Title: </b><span id="title-17"></span></p>
 	<p><span id="title-18"></span></p>
-	<p><span id="description-14"></span></p>
+	<p><b>Description: </b><span id="description-14"></span></p>
 
-	<p><b>Reset Password:</b></p>
-	<p><span id="title-19"></span></p>
-	<p><span id="description-15"></span></p>
+	<h2><b>Reset Password</b></h2>
+	<p><b>Title: </b><span id="title-19"></span></p>
+	<p><b>Description: </b><span id="description-15"></span></p>
 
-	<p><b>Find UserID:</b></p>
-	<p><span id="title-20"></span></p>
-	<p><span id="description-16"></span></p>
+	<h2><b>Find UserID</b></h2>
+	<p><b>Title: </b><span id="title-20"></span></p>
+	<p><b>Description: </b><span id="description-16"></span></p>
 
-	<p><b>Privacy Policy:</b></p>
-	<p><span id="title-21"></span></p>
-	<p><span id="description-17"></span></p>
+	<h2><b>Privacy Policy</b></h2>
+	<p><b>Title:: </b><span id="title-21"></span></p>
+	<p><b>Description: </b><span id="description-17"></span></p>
 
-	<p><b>Accessibility Statement:</b></p>
-	<p><span id="title-22"></span></p>
+	<h2><b>Accessibility Statement</b></h2>
+	<p><b>Title: </b><span id="title-22"></span></p>
 	<p><span id="title-23"></span></p>
-	<p><span id="description-18"></span></p>
+	<p><b>Description: </b><span id="description-18"></span></p>
 
-	<p><b>Terms:</b></p>
-	<p><span id="title-24"></span></p>
-	<p><span id="description-19"></span></p>
+	<h2><b>Terms</b></h2>
+	<p><b>Title: </b><span id="title-24"></span></p>
+	<p><b>Description: </b><span id="description-19"></span></p>
 
-	<p><b>CA Privacy Notice:</b></p>
-	<p><span id="title-25"></span></p>
-	<p><span id="description-20"></span></p>
+	<h2><b>CA Privacy Notice</b></h2>
+	<p><b>Title: </b><span id="title-25"></span></p>
+	<p><b>Description: </b><span id="description-20"></span></p>
 
-	<p><b>Virtual Leasing:</b></p>
-	<p><span id="title-26"></span></p>
-	<p><span id="description-21"></span></p>
+	<h2><b>Virtual Leasing</b></h2>
+	<p><b>Title: </b><span id="title-26"></span></p>
+	<p><b>Description: </b><span id="description-21"></span></p>
 
-	<p><b>COVID-19 FAQ:</b></p>
-	<p><span id="title-27"></span></p>
-	<p><span id="description-22"></span></p>
+	<h2><b>COVID-19 FAQ</b></h2>
+	<p><b>Title: </b><span id="title-27"></span></p>
+	<p><b>Description: </b><span id="description-22"></span></p>
 
-	<p><b>Custom Title:</b></p>
-	<p><span id="title-28"></span></p>
+	<h2><b>Custom Title</b></h2>
+	<p><b>Title: </b><span id="title-28"></span></p>
 
 	<script>
 
@@ -230,7 +230,6 @@
 			for (let j = 0; j < descriptions.length; j++) {
 				let descriptionDiv = document.getElementById(`description-${j}`);
 				descriptionDiv.innerHTML = descriptions[j];
-				console.log(descriptionDiv.innerHTML.length);
 			};
 
 			for (let k = 0; k < pageTypes.length; k++) {
