Comment out arrays and functions and add object and for loop
Comment out the arrays with content in them and remove any functions that rely on those
arrays. Start object with content in it and for loop that cycles through keys in object.

--- a/titles.html
+++ b/titles.html
@@ -80,153 +80,8 @@
 
 	<button id="content-button">Generate Content</button>
 
-	<div>
-		<h2><b>Homepage</b></h2>
-		<p><b>Title: </b><span id="title-0"></span></p>
-		<p><b>Description: </b><span id="description-0"></span></p>
-	</div>
+	<div id="content">
 
-	<div>
-		<h2><b>Gallery</b></h2>
-		<p><b>Title: </b><span id="title-1"></span></p>
-		<p><b>Description: </b><span id="description-1"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Amenities</b></h2>
-		<p><b>Title: </b><span id="title-2"></span></p>
-		<p><b>Description: </b><span id="description-2"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Floor Plans</b></h2>
-		<p><b>Title: </b><span id="title-3"></span></p>
-		<p><b>Description: </b><span id="description-3"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Neighborhood</b></h2>
-		<p><b>Title: </b><span id="title-4"></span></p>
-		<p><b>Description: </b><span id="description-4"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Contact</b></h2>
-		<p><b>Title: </b><span id="title-5"></span></p>
-		<p><b>Description: </b><span id="description-5"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Schedule a Tour</b></h2>
-		<p><b>Title: </b><span id="title-6"></span></p>
-		<p><span id="title-7"></span></p>
-		<p><b>Description: </b><span id="description-6"></span></p>
-
-	</div>
-
-	<div>
-		<h2><b>Apply Online</b></h2>
-		<p><b>Title: </b><span id="title-8"></span></p>
-		<p><span id="title-9"></span></p>
-		<p><b>Description: </b><span id="description-7"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Virtual Tours</b></h2>
-		<p><b>Title: </b><span id="title-10"></span></p>
-		<p><b>Description: </b><span id="description-8"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Pet Friendly</b></h2>
-		<p><b>Title: </b><span id="title-11"></span></p>
-		<p><b>Description: </b><span id="description-9"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Directions</b></h2>
-		<p><b>Title: </b><span id="title-12"></span></p>
-		<p><b>Description: </b><span id="description-10"></span></p>
-	</div>
-
-	<div>
-		<h2><b>FAQ</b></h2>
-		<p><b>Title: </b><span id="title-13"></span></p>
-		<p><b>Description: </b><span id="description-11"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Availability</b></h2>
-		<p><b>Title: </b><span id="title-14"></span></p>
-		<p><span id="title-15"></span></p>
-		<p><b>Description: </b><span id="description-12"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Reviews</b></h2>
-		<p><b>Title: </b><span id="title-16"></span></p>
-		<p><b>Description: </b><span id="description-13"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Resident Portal</b></h2>
-		<p><b>Title: </b><span id="title-17"></span></p>
-		<p><span id="title-18"></span></p>
-		<p><b>Description: </b><span id="description-14"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Reset Password</b></h2>
-		<p><b>Title: </b><span id="title-19"></span></p>
-		<p><b>Description: </b><span id="description-15"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Find UserID</b></h2>
-		<p><b>Title: </b><span id="title-20"></span></p>
-		<p><b>Description: </b><span id="description-16"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Privacy Policy</b></h2>
-		<p><b>Title:: </b><span id="title-21"></span></p>
-		<p><b>Description: </b><span id="description-17"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Accessibility Statement</b></h2>
-		<p><b>Title: </b><span id="title-22"></span></p>
-		<p><span id="title-23"></span></p>
-		<p><b>Description: </b><span id="description-18"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Terms</b></h2>
-		<p><b>Title: </b><span id="title-24"></span></p>
-		<p><b>Description: </b><span id="description-19"></span></p>
-	</div>
-
-	<div>
-		<h2><b>CA Privacy Notice</b></h2>
-		<p><b>Title: </b><span id="title-25"></span></p>
-		<p><b>Description: </b><span id="description-20"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Virtual Leasing</b></h2>
-		<p><b>Title: </b><span id="title-26"></span></p>
-		<p><b>Description: </b><span id="description-21"></span></p>
-	</div>
-
-	<div>
-		<h2><b>COVID-19 FAQ</b></h2>
-		<p><b>Title: </b><span id="title-27"></span></p>
-		<p><b>Description: </b><span id="description-22"></span></p>
-	</div>
-
-	<div>
-		<h2><b>Custom Title</b></h2>
-		<p><b>Title: </b><span id="title-28"></span></p>
 	</div>
 
 	<script>
@@ -248,7 +103,32 @@
 
 			const titleEnds = [` ${propertyType}s | ${propertyType}s for Rent in `, ` | ${propertyType}s for Rent in `, ` | ${propertyType}s in `, ` | ${propertyType}s `];
 
-			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Tours", "Apply Online", "Apply Now", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", `${propertyType} Search`, "Availability", "Reviews", "Resident Portal", "Residents", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ", `${customTitle}`];
+			const content = {
+				homepage: {
+					name: 'Homepage',
+					title: '',
+					description: `${propertyName} ${propertyType}s in ${city}, ${state} ${zipCode}. Find your new ${propertyType.toLowerCase()} today! We offer a variety of ${propertyType.toLowerCase()} floor plans. Contact us today!`,
+					content: `Come home to ${propertyName} ${propertyType}s in ${city}, ${state}! Our ${propertyType.toLowerCase()}s are home to a fantastic location where endless opportunities for work and play collide. At our ${propertyType.toLowerCase()}s, you can choose from our ${propertyType.toLowerCase()}s that are complete with everything you need to always feel right at home. Here you’ll find yourself surrounded by an amenity-rich community and beautiful scenery. Our ${propertyType.toLowerCase()}s place you in the best destination to embrace ${city} living. This prime neighborhood will give you easier commutes and allow you to experience the perfect balance of modern city life and relaxation. Ready to step into your dream ${propertyType.toLowerCase()}? Apply now to ${propertyName} in ${city} today.`
+				},
+				gallery: {
+					name: 'Gallery',
+					title: 'Photos',
+					description: `Take a photo tour through your new ${city} ${propertyType.toLowerCase()}, and then schedule a tour today! See for yourself better living at ${propertyName}.`
+				}
+			};
+
+			for (let key in content) {
+				if (!content.hasOwnProperty(key)) continue;
+
+				let obj = content[key];
+				for (prop in obj) {
+					if (!obj.hasOwnProperty(prop)) continue;
+						console.log(`${prop}: ${obj[prop]}`);
+				};
+			};
+
+
+/*			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Tours", "Apply Online", "Apply Now", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", `${propertyType} Search`, "Availability", "Reviews", "Resident Portal", "Residents", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ", `${customTitle}`];
 
 			const descriptions = [
 				`${propertyName} ${propertyType}s in ${city}, ${state} ${zipCode}. Find your new ${propertyType.toLowerCase()} today! We offer a variety of ${propertyType.toLowerCase()} floor plans. Contact us today!`,
@@ -311,7 +191,7 @@
 						};
 					};
 				};
-			};
+			};*/
 		};
 
 		</script>
