Add content objects and move javascript to separate file

--- a/titles.html
+++ b/titles.html
@@ -84,174 +84,7 @@
 
 	</div>
 
-	<script>
+	<script src='titles.js'></script>
 
-
-		let contentButton = document.getElementById('content-button');
-
-		contentButton.addEventListener('click',generateContent);
-
-		function generateContent() {
-
-			let propertyType = document.getElementById('property-type').value;
-			let propertyName = document.getElementById('property-name').value;
-			let city = document.getElementById('city').value;
-			let state = document.getElementById('state').value;
-			let zipCode = document.getElementById('zip-code').value;
-			let titleLength = document.getElementById('title-length').value;
-			let customTitle = document.getElementById('custom-title').value;
-			let contentDiv = document.getElementById('content');
-
-			const titleEnds = [` ${propertyType}s | ${propertyType}s for Rent in `, ` | ${propertyType}s for Rent in `, ` | ${propertyType}s in `, ` | ${propertyType}s `];
-
-			const content = {
-				homepage: {
-					page: 'Homepage',
-					title: '',
-					description: `${propertyName} ${propertyType}s in ${city}, ${state} ${zipCode}. Find your new ${propertyType.toLowerCase()} today! We offer a variety of ${propertyType.toLowerCase()} floor plans. Contact us today!`,
-					content: `Come home to ${propertyName} ${propertyType}s in ${city}, ${state}! Our ${propertyType.toLowerCase()}s are home to a fantastic location where endless opportunities for work and play collide. At our ${propertyType.toLowerCase()}s, you can choose from our ${propertyType.toLowerCase()}s that are complete with everything you need to always feel right at home. Here you’ll find yourself surrounded by an amenity-rich community and beautiful scenery. Our ${propertyType.toLowerCase()}s place you in the best destination to embrace ${city} living. This prime neighborhood will give you easier commutes and allow you to experience the perfect balance of modern city life and relaxation. Ready to step into your dream ${propertyType.toLowerCase()}? Apply now to ${propertyName} in ${city} today.`
-				},
-				gallery: {
-					page: 'Gallery',
-					title: 'Photos',
-					description: `Take a photo tour through your new ${city} ${propertyType.toLowerCase()}, and then schedule a tour today! See for yourself better living at ${propertyName}.`
-				}
-			};
-
-			for (let key in content) {
-				if (!content.hasOwnProperty(key)) continue;
-
-					let oldDiv = document.getElementById(`${key}-content`);
-
-
-					if (oldDiv) {
-						while (oldDiv.firstChild) {
-							oldDiv.removeChild(oldDiv.firstChild);
-						};
-						contentDiv.removeChild(oldDiv);
-					};
-
-					let newDiv = document.createElement('div');
-					newDiv.setAttribute('id', `${key}-content`);
-					contentDiv.appendChild(newDiv);
-
-				let obj = content[key];
-				for (prop in obj) {
-					if (!obj.hasOwnProperty(prop)) {continue};
-
-					if (prop === 'page') {
-
-						let newH = document.createElement('h2')
-						newH.innerHTML = obj[prop];
-						newDiv.appendChild(newH);
-
-					} else if (prop.includes('title')) {
-						let newTitle = document.createElement('p');
-
-							for (let i = 0; i < titleEnds.length; i++) {
-
-								let bar
-								if (!obj[prop]) {
-									bar = "";
-								} else {
-									bar = " | ";
-								};
-
-								let pageTitle = obj[prop].concat(bar, propertyName, titleEnds[i], city, ', ', state, ', ', zipCode);
-
-								if (pageTitle.length <= titleLength) {
-									newTitle.innerHTML = `<b>${prop.toUpperCase()}: </b> ${pageTitle}`;
-									break;
-								} else {
-
-									let pageTitle = obj[prop].concat(bar, propertyName, titleEnds[i], city, ', ', state);
-
-									if (pageTitle.length <= titleLength) {
-										newTitle.innerHTML = `<b>${prop.toUpperCase()}: </b> ${pageTitle}`;
-										break;
-									} else if (i === titleEnds.length - 1) {
-										newTitle.innerHTML = `<b>${prop.toUpperCase()}: </b>ERROR: inputs too long to create title shorter than max title length.`;
-										break;
-									};
-								};
-							};
-						newDiv.appendChild(newTitle);
-					} else {
-
-						let newContent = document.createElement('p');
-						newContent.innerHTML = `<b>${prop.toUpperCase()}:</b> ${obj[prop]}`;
-						newDiv.appendChild(newContent);
-					};
-				};
-			};
-
-
-/*			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Tours", "Apply Online", "Apply Now", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", `${propertyType} Search`, "Availability", "Reviews", "Resident Portal", "Residents", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ", `${customTitle}`];
-
-			const descriptions = [
-				`${propertyName} ${propertyType}s in ${city}, ${state} ${zipCode}. Find your new ${propertyType.toLowerCase()} today! We offer a variety of ${propertyType.toLowerCase()} floor plans. Contact us today!`,
-				`Take a photo tour through your new ${city} ${propertyType.toLowerCase()}, and then schedule a tour today! See for yourself better living at ${propertyName}.`,
-				`Our ${city}, ${state} ${propertyType.toLowerCase()}s are outfitted with a variety of features. Check out the amenities that will be available to you at ${propertyName}.`,
-				`At ${propertyName} ${propertyType}s in ${city}, ${state}, you can choose from our ${propertyType.toLowerCase()} floorplans that are complete with everything you need.`,
-				`Experience the best ${city}, ${state} has to offer. Come home to ${propertyName} ${propertyType}s and come home to better living. Contact us today!`,
-				`Interested in learning more about ${propertyName}? Submit the contact form with your questions. Our leasing consultants will contact you soon.`,
-				`Call or email us to schedule a tour of ${propertyName} today. Come see your new ${city} ${propertyType.toLowerCase()} and the community features in person.`,
-				`Apply now to ${propertyName}. Our ${city} ${propertyType.toLowerCase()}s provide you with everything that you need to be successful in your daily routine.`,
-				`Take a virtual ${propertyType.toLowerCase()} tour of ${propertyName} in ${city}, ${state}, and walk through one of our ${propertyType.toLowerCase()}s from the comfort of your own home!`,
-				`${propertyName} is not just a pet-friendly property, but a pet-enthusiastic property. Your pets will find just as inviting a home here as you will.`,
-				`Stop by and visit ${propertyName} today! Just type in your location and follow the directions to your future ${city} ${propertyType.toLowerCase()} community.`,
-				`Check out some of the frequently asked questions about ${propertyName} in ${city}, ${state}, then contact us about your future ${propertyType.toLowerCase()} today!`,
-				`Search through the available ${propertyType.toLowerCase()}s at ${propertyName} and find the perfect ${city}, ${state} ${propertyType.toLowerCase()} for you, then apply online today!`,
-				`See what people are saying about ${propertyName}! We value our residents' voices, and can’t wait for you to see our ${city} ${propertyType.toLowerCase()}s.`,
-				`The resident portal for ${propertyName} in ${city}, ${state} makes it easy for you to request maintenance service and pay your rent online.`,
-				`Reset your password for ${propertyName} ${propertyType}s in ${city}, ${state}. Please enter your User ID, and we will help you reset your account.`,
-				`Find your UserID for ${propertyName} ${propertyType}s in ${city}, ${state}. Please enter the email address you registered with when you moved in.`,
-				`This is the privacy policy statement for ${propertyName} ${propertyType}s in ${city}, ${state}. Please contact us with any questions you may have.`,
-				`At ${propertyName}, we actively work to increase the accessibility of our website and adhere to many of the available standards and guidelines.`,
-				`By accessing the website for ${propertyName}, you agree to be bound by the website Terms and Conditions of Use, all applicable laws, and regulations.`,
-				`This is a privacy notice for the ${propertyName} website that applies solely to all visitors, users, and others who reside in the State of California.`,
-				`${propertyName} ${propertyType}s in ${city}, ${state} offers virtual leasing, which lets you find a floor plan, apply, and sign a lease securely online.`,
-				`Find COVID-19 updates and read through ${propertyName} ${propertyType}s COVID-19 FAQ to learn more about the actions and leasing procedures we’re taking.`
-			];
-
-			for (let j = 0; j < descriptions.length; j++) {
-				let descriptionDiv = document.getElementById(`description-${j}`);
-				descriptionDiv.innerHTML = descriptions[j];
-			};
-
-			for (let k = 0; k < pageTypes.length; k++) {
-
-				for (let i = 0; i < titleEnds.length; i++) {
-
-					let titleDiv = document.getElementById(`title-${k}`);
-					let bar
-					if (k === 0) {
-						bar = "";
-					} else {
-						bar = " | ";
-					};
-
-					let pageTitle = pageTypes[k].concat(bar, propertyName, titleEnds[i], city, ', ', state, ', ', zipCode);
-
-					if (pageTitle.length <= titleLength) {
-						titleDiv.innerHTML = pageTitle;
-						break;
-					} else {
-
-						let pageTitle = pageTypes[k].concat(bar, propertyName, titleEnds[i], city, ', ', state);
-
-						if (pageTitle.length <= titleLength) {
-							titleDiv.innerHTML = pageTitle;
-							break;
-						} else if (i === titleEnds.length - 1) {
-							titleDiv.innerHTML = "ERROR: inputs too long to create title shorter than max title length.";
-							break;
-						};
-					};
-				};
-			};*/
-		};
-
-		</script>
-	</body>
-	</html>
+</body>
+</html>
