--- a/titles.html
+++ b/titles.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Generate Website Content</h1>
 
-	<ul>
+	<ul style='list-style-type: none'>
 		<li>Property Type: 
 			<select id="property-type">
 				<option value="Apartment">Apartments</option>
