Add condos to property types

--- a/titles.html
+++ b/titles.html
@@ -13,6 +13,7 @@
 			<select id="property-type">
 				<option value="Apartment">Apartments</option>
 				<option value="Townhome">Townhomes</option>
+				<option value="Condo">Condos</option>
 			</select>
 		</li>
 		<li>Property Name: <input type="text" id="property-name" maxlength="40"></li>
