Add multiple custom titles

--- a/titles.html
+++ b/titles.html
@@ -75,7 +75,10 @@
 			</select>
 		</li>
 		<li>Max Title Length: <input type="number" id="title-length" max="100" min="0"></li><br />
-		<li>Custom Title: <input type="text" id="custom-title" maxlength="40"></li>
+		<li>Custom Title 1: <input type="text" id="custom-title-1" maxlength="40"></li>
+		<li>Custom Title 2: <input type="text" id="custom-title-2" maxlength="40"></li>
+		<li>Custom Title 3: <input type="text" id="custom-title-3" maxlength="40"></li>
+		<li>Custom Title 4: <input type="text" id="custom-title-4" maxlength="40"></li>
 	</ul>
 
 	<button id="content-button">Generate Content</button>
